--- a/index.html
+++ b/index.html
@@ -3,133 +3,92 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pixel Paint</title>
+<title>Pixel Paint PRO</title>
 
 <style>
     body {
         margin: 0;
-        font-family: Arial, sans-serif;
-        background-color: #121212;
+        background: #121212;
         color: white;
+        font-family: Arial, sans-serif;
         text-align: center;
-    }
-
-    #home-screen {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        gap: 20px;
     }
 
     h1 {
         font-size: 40px;
-        font-weight: bold;
+        margin-top: 20px;
         color: #00b7ff;
-        letter-spacing: 2px;
     }
 
-    #start-btn {
-        padding: 15px 30px;
-        font-size: 20px;
+    #tools {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+        margin-top: 15px;
+        flex-wrap: wrap;
+    }
+
+    button, select, input[type="color"] {
+        padding: 10px 15px;
+        font-size: 18px;
+        border-radius: 8px;
         border: none;
-        border-radius: 10px;
-        background-color: #00b7ff;
-        color: black;
         cursor: pointer;
-        transition: 0.3s;
-    }
-    #start-btn:hover {
-        background-color: #008ccc;
     }
 
-    #editor {
-        display: none;
-        padding-top: 20px;
+    #grid-container {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        transform: scale(1);
+        transition: 0.2s;
     }
 
     #grid {
         display: grid;
-        grid-template-columns: repeat(16, 20px);
-        margin: 20px auto;
-        width: max-content;
     }
 
     .pixel {
         width: 20px;
         height: 20px;
-        background: white;
         border: 1px solid #333;
-        cursor: pointer;
+        background: white;
     }
 
-    #save-btn {
-        margin-top: 20px;
-        padding: 10px 20px;
-        font-size: 18px;
-        border: none;
-        background-color: #00ff6a;
-        color: black;
-        cursor: pointer;
-        border-radius: 8px;
+    .tool-btn {
+        background: #00b7ff;
     }
 </style>
 </head>
 <body>
 
-<div id="home-screen">
-    <h1>PIXEL PAINT</h1>
-    <p>Crie desenhos usando pixels e solte sua criatividade!</p>
-    <button id="start-btn">Começar a Pintar</button>
-</div>
+<h1>PIXEL PAINT PRO 🎨</h1>
 
-<div id="editor">
-    <h2>Editor de Pixels</h2>
-    <div id="grid"></div>
-    <button id="save-btn">Salvar Desenho</button>
-</div>
+<!-- Ferramentas -->
+<div id="tools">
 
-<script>
-const grid = document.getElementById("grid");
-for (let i = 0; i < 16 * 16; i++) {
-    const pixel = document.createElement("div");
-    pixel.classList.add("pixel");
+    <!-- Cor -->
+    <input type="color" id="color-picker" value="#000000">
 
-    pixel.addEventListener("click", () => {
-        pixel.style.backgroundColor =
-            pixel.style.backgroundColor === "white" ? "black" : "white";
-    });
+    <!-- Borracha -->
+    <button class="tool-btn" id="eraser-btn">Borracha</button>
 
-    grid.appendChild(pixel);
-}
+    <!-- Balde -->
+    <button class="tool-btn" id="fill-btn">Balde</button>
 
-document.getElementById("start-btn").onclick = () => {
-    document.getElementById("home-screen").style.display = "none";
-    document.getElementById("editor").style.display = "block";
-};
+    <!-- Limpar tudo -->
+    <button class="tool-btn" id="clear-btn">Limpar Tudo</button>
 
-document.getElementById("save-btn").onclick = () => {
-    const canvas = document.createElement("canvas");
-    canvas.width = 160;
-    canvas.height = 160;
-    const ctx = canvas.getContext("2d");
+    <!-- Tamanho da grade -->
+    <select id="grid-size">
+        <option value="16">16 x 16</option>
+        <option value="32">32 x 32</option>
+        <option value="64">64 x 64</option>
+    </select>
 
-    const pixels = document.querySelectorAll(".pixel");
-    pixels.forEach((pixel, i) => {
-        const x = (i % 16) * 10;
-        const y = Math.floor(i / 16) * 10;
+    <!-- Zoom -->
+    <button class="tool-btn" id="zoom-plus">Zoom +</button>
+    <button class="tool-btn" id="zoom-minus">Zoom -</button>
 
-        ctx.fillStyle = pixel.style.backgroundColor || "white";
-        ctx.fillRect(x, y, 10, 10);
-    });
-
-    const link = document.createElement("a");
-    link.download = "meu_desenho.png";
-    link.href = canvas.toDataURL();
-    link.click();
-};
-</script>
-
-</body>
-</html>
+    <!-- Salvar -->
+    <button class="tool-btn
