--- a/index.html
+++ b/index.html
@@ -3,92 +3,193 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pixel Paint PRO</title>
+<title>Pixel Paint</title>
 
 <style>
-    body {
-        margin: 0;
-        background: #121212;
-        color: white;
-        font-family: Arial, sans-serif;
-        text-align: center;
-    }
+/* ======== ESTILO GERAL ======== */
+body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(135deg, #6a00ff, #00b7ff);
+    color: white;
+    height: 100vh;
+    overflow: hidden;
+}
 
-    h1 {
-        font-size: 40px;
-        margin-top: 20px;
-        color: #00b7ff;
-    }
+/* ======== TELA INICIAL ======== */
+#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    animation: fadeIn 1s ease;
+}
 
-    #tools {
-        display: flex;
-        justify-content: center;
-        gap: 15px;
-        margin-top: 15px;
-        flex-wrap: wrap;
-    }
+@keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.95); }
+    to { opacity: 1; transform: scale(1); }
+}
 
-    button, select, input[type="color"] {
-        padding: 10px 15px;
-        font-size: 18px;
-        border-radius: 8px;
-        border: none;
-        cursor: pointer;
-    }
+#title-box {
+    background: rgba(255, 255, 255, 0.15);
+    border: 3px solid rgba(255, 255, 255, 0.4);
+    padding: 30px 50px;
+    border-radius: 20px;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 0 20px #ffffff55;
+}
 
-    #grid-container {
-        margin-top: 20px;
-        display: flex;
-        justify-content: center;
-        transform: scale(1);
-        transition: 0.2s;
-    }
+h1 {
+    font-size: 45px;
+    margin: 0;
+    letter-spacing: 2px;
+}
 
-    #grid {
-        display: grid;
-    }
+#start-btn {
+    margin-top: 30px;
+    padding: 20px 50px;
+    font-size: 24px;
+    font-weight: bold;
+    border: none;
+    border-radius: 15px;
+    background: #ffe600;
+    color: black;
+    cursor: pointer;
+    transition: 0.2s;
+    box-shadow: 0 6px 0 #c4a700;
+}
+#start-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 9px 0 #c4a700;
+}
 
-    .pixel {
-        width: 20px;
-        height: 20px;
-        border: 1px solid #333;
-        background: white;
-    }
+/* ======== EDITOR ======== */
+#editor {
+    display: none;
+    height: 100%;
+    padding-top: 20px;
+    text-align: center;
+}
 
-    .tool-btn {
-        background: #00b7ff;
-    }
+#grid {
+    display: grid;
+    grid-template-columns: repeat(32, 16px);
+    width: max-content;
+    margin: 20px auto;
+}
+
+.pixel {
+    width: 16px;
+    height: 16px;
+    background: white;
+    border: 1px solid #00000022;
+    cursor: pointer;
+}
+
+/* Painel */
+#tools {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 15px;
+}
+
+.tool {
+    background: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 10px;
+    color: black;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#color-picker {
+    width: 50px;
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
 </style>
 </head>
 <body>
 
-<h1>PIXEL PAINT PRO 🎨</h1>
+<!-- ======== TELA INICIAL ======== -->
+<div id="home">
+    <div id="title-box">
+        <h1>PIXEL PAINT</h1>
+        <p>Crie desenhos no estilo Gartic Phone, só que em pixels!</p>
+    </div>
+    <button id="start-btn">Começar a Pintar</button>
+</div>
 
-<!-- Ferramentas -->
-<div id="tools">
+<!-- ======== EDITOR ======== -->
+<div id="editor">
+    <h2>Editor de Pixel Art</h2>
 
-    <!-- Cor -->
-    <input type="color" id="color-picker" value="#000000">
+    <div id="tools">
+        <input type="color" id="color-picker" value="#000000">
+        <button class="tool" id="eraser">Borracha</button>
+        <button class="tool" id="clear">Limpar</button>
+    </div>
 
-    <!-- Borracha -->
-    <button class="tool-btn" id="eraser-btn">Borracha</button>
+    <div id="grid"></div>
+</div>
 
-    <!-- Balde -->
-    <button class="tool-btn" id="fill-btn">Balde</button>
+<script>
+// ======== PIXEL GRID ========
+function createGrid() {
+    const grid = document.getElementById("grid");
+    grid.innerHTML = "";
+    const size = 32 * 32;
 
-    <!-- Limpar tudo -->
-    <button class="tool-btn" id="clear-btn">Limpar Tudo</button>
+    for (let i = 0; i < size; i++) {
+        const pixel = document.createElement("div");
+        pixel.className = "pixel";
+        pixel.style.background = "white";
 
-    <!-- Tamanho da grade -->
-    <select id="grid-size">
-        <option value="16">16 x 16</option>
-        <option value="32">32 x 32</option>
-        <option value="64">64 x 64</option>
-    </select>
+        pixel.addEventListener("click", () => {
+            if (currentTool === "brush") {
+                pixel.style.background = currentColor;
+            } else {
+                pixel.style.background = "white";
+            }
+        });
 
-    <!-- Zoom -->
-    <button class="tool-btn" id="zoom-plus">Zoom +</button>
-    <button class="tool-btn" id="zoom-minus">Zoom -</button>
+        grid.appendChild(pixel);
+    }
+}
 
-    <!-- Salvar -->
-    <button class="tool-btn
+// ======== VARIÁVEIS ========
+let currentColor = "#000000";
+let currentTool = "brush";
+
+// ======== FERRAMENTAS ========
+document.getElementById("color-picker").oninput = (e) => {
+    currentTool = "brush";
+    currentColor = e.target.value;
+};
+
+document.getElementById("eraser").onclick = () => {
+    currentTool = "eraser";
+};
+
+document.getElementById("clear").onclick = () => {
+    document.querySelectorAll(".pixel").forEach(p => p.style.background = "white");
+};
+
+// ======== TELA INICIAL ========
+document.getElementById("start-btn").onclick = () => {
+    document.getElementById("home").style.display = "none";
+    document.getElementById("editor").style.display = "block";
+    createGrid();
+};
+</script>
+
+</body>
+</html>
